<resources>
    <string name="empty" />
    <string name="app_name">Mentallys</string>
    <string name="generic_background_gradient_description">Grandient décoratif</string>
    <string name="azure_communication_endpoint">https://mentallys-communicationservices-dev.communication.azure.com/</string>
    <string name="generic_decorative_image_description">Image décorative</string>
    <string name="greetings">Bienvenue</string>
    <string name="mandatory_field"><font color='#FF0000'>*</font></string>
    <string name="chat_with_speaker">Discuter avec un intervenant</string>
    <string name="add_event">Ajouter un événement</string>
    <string name="private_notes">Notes privées</string>
    <string name="private_note_description">Ce que vous écrivez ici reste privé en n\'apparaît pas aux utilisataurs ayant accès à votre parcours.</string>
    <string name="home_page_pic_description">Mentallys</string>
    <string name="home_page_title_description">Trouvez de l\'aide</string>
    <string name="movies_section_title">M\'informer</string>
    <string name="movie_section_categories_title"><![CDATA[Catégories >]]></string>
    <string name="self_care_title">Utiliser les autosoins</string>
    <string name="self_care_program_title">Démarrer un programme d\'autosoins</string>
    <string name="self_care_tools_title">Accéder aux outils d\'autosoins</string>
    <string name="help_section_title_text">Trouver de l\'aide</string>
    <string name="help_relative_title_text">Aider un proche</string>
    <string name="find_service_relative_title">Trouver un service de soutien aux proches</string>
    <string name="home_page_title">mentallys</string>
    <string name="error_loading_events">Une erreur est survenue lors du chargement des données</string>
    <string name="splash_screen_note">Notre santé mentale mérite ce que qu\'il y a de mieux</string>
    <string name="free_service">Service gratuit d\'intérêt général</string>
    <string name="save_event">Enregistrer</string>
    <string name="maintenance">Entretien</string>
    <string name="home_page_subtitle">Qu\'est ce qui ne va pas ?</string>
    <string name="home_page_search">Rechercher</string>
    <string name="home_page_guide_title">Suivez le guide</string>
    <string name="home_page_guide_description">Répondre à des questions et accéder à un résumé personalisé des choix qui s\'offrent à vous.</string>
    <string name="home_page_guide_action">Commencer</string>
    <string name="home_page_help_title">Conseils personalisés</string>
    <string name="home_page_help_description">Un pair aidant est une personne formée qui a traversé comme vous des difficultés, et qui va mieux.</string>
    <string name="home_page_help_action">Voir les profils</string>
    <string name="home_page_support_title">Consulter un professionnel</string>
    <string name="home_page_support_description">Découvrez quel type de professionnel en santé mentale vous conviendrait le mieux.</string>
    <string name="home_page_medic_title">Parler à un intervenant</string>
    <string name="home_page_medic_description">Un travailleur social vous écoute et vous oriente vers les ressources appropriées.</string>
    <string name="home_page_private_title">Consulter un médecin</string>
    <string name="home_page_help_maxime">Parcourir des profils</string>
    <string name="home_page_private_description">Vous n’avez pas de médecin de famille ?Explorez trois possibilités pour accéder à une consultation médicale rapidement.</string>
    <string name="home_page_glossary_title">Glossaire</string>
    <string name="home_page_glossary_description">Vous ne comprenez pas certains mots compliqués ou inhabituels ?</string>
    <string name="home_page_glossary_action">Voir les définitions</string>
    <string name="home_page_app_title">Logo de l\'application</string>
    <string name="bottom_menu_help">Trouver de l\'aide</string>
    <string name="bottom_menu_care">Prendre soin de moi</string>
    <string name="bottom_menu_follow_up">Mon suivi</string>
    <string name="begin">Commencer</string>
    <string name="view_pager_description">Prenez soin de votre santé psychologique et trouvez l’aide dont vous avez besoin.</string>
    <string name="view_pager_mention">Service gratuit agréé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Vous n\'avez pas de compte ?<b> S\'inscrire maintenant</b></string>
    <string name="email">email</string>
    <string name="email_hint">john@mail.czom</string>
    <string name="password">Mot de passe *</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
    <string name="resource_private">Privé</string>
    <string name="resource_public">Public</string>
    <string name="resource_community">Communautaire</string>
    <string name="resource_private_plural">Privés</string>
    <string name="resource_public_plural">Publics</string>
    <string name="resource_community_plural">Communautaires</string>
    <string name="resource_social_worker">Travailleur social</string>
    <string name="resource_psychologist">Psychologue</string>
    <string name="resource_family_therapist">Thérapeute conjugal et familial</string>
    <string name="resource_sexologist">Sexologue</string>
    <string name="resource_occupational_therapist">Ergothérapeute</string>
    <string name="resource_peer">Pair aidant</string>
    <string name="resource_psychoeducator">Psychoéducateur</string>
    <string name="resource_psychiatrist">Psychiatre</string>
    <string name="resource_nurse">Infirmière</string>
    <string name="resource_family_doctor">Médecin de famille</string>
    <string name="resource_adult">Adultes</string>
    <string name="resource_teenager">Jeunes</string>
    <string name="resource_family">Familles</string>
    <string name="resource_elder">Ainés</string>
    <string name="resource_free">Sans frais</string>
    <string name="resource_reduce">Frais réduits</string>
    <string name="resource_paid">À vos frais</string>
    <string name="resource_on_site">En personne</string>
    <string name="resource_remote">À distance</string>
    <string name="language_french">Français</string>
    <string name="language_english">Anglais</string>
    <string name="language_spanish">Espagnol</string>
    <string name="language_german">Allemand</string>
    <string name="error_geolocation">Impossible de récupérer la géolocalisation</string>
    <string name="error_map_no_result">Aucun résultat dans cette région</string>
    <string name="error_list_no_result_title">Aucun résultat</string>
    <string name="error_list_no_result_description">Essayez les filtres ou une recherche par mots</string>
    <string name="error_list_no_history_title">Pas d\'historique</string>
    <string name="error_list_no_history_description">Commencer par consulter une page de resource</string>
    <string name="resource_menu_share">Partager</string>
    <string name="resource_menu_bookmark">Sauvegarder pour plus tard</string>
    <string name="resource_call">Appeler</string>
    <string name="resource_message">Courriel</string>
    <string name="resource_client">Clientèle</string>
    <string name="resource_service">Services offerts</string>
    <string name="resource_professional">Intervenants</string>
    <string name="resource_signal">Mettre à jour ce service</string>
    <string name="resource_search_title">Quel type d\'aide souhaitez vous ?</string>
    <string name="resource_search_subtitle">Recherchez des services</string>
    <string name="intervenant_search_title">Avec qui souhaitez-vous discuter?</string>
    <string name="intervenant_search_subtitle">Rechercher des intervenants</string>
    <string name="resource_from">De</string>
    <string name="resource_to">à</string>
    <string name="messages">Messages</string>
    <string name="notification">Notifications</string>
    <string name="documents">Documents</string>
    <string name="bottom_sheet_filter_display_more"><u>Afficher plus</u></string>
    <string name="bottom_sheet_filter_display_less"><u>Afficher moins</u></string>
    <string name="bottom_sheet_cost">Coûts</string>
    <string name="bottom_sheet_client">Clientèle</string>
    <string name="bottom_sheet_tags">Motifs</string>
    <string name="bottom_sheet_activities">Intervenants</string>
    <string name="bottom_sheet_modalities">Modalités</string>
    <string name="bottom_sheet_languages">Langues</string>
    <string name="bottom_sheet_filters">Filtres</string>
    <string name="bottom_sheet_reset_filters">Tout effacer</string>
    <string name="email_modification_subject">[Demande de modification]</string>
    <string name="email_modification_template">Décrivez succinctement le problème :</string>
    <string name="email_missing_subject">[Demande d\'ajout de resource]</string>
    <string name="email_missing_template">Décrivez la resource manquante :</string>
    <plurals name="bottom_sheet_filter_display_services">
        <item quantity="one">Afficher %1$s service</item>
        <item quantity="other">Afficher %1$s services</item>
    </plurals>
    <string name="days_monday">Lundi</string>
    <string name="days_tuesday">Mardi</string>
    <string name="days_wednesday">Mercredi</string>
    <string name="days_thursday">Jeudi</string>
    <string name="days_friday">Vendredi</string>
    <string name="days_saturday">Samedi</string>
    <string name="days_sunday">Dimanche</string>
    <string name="search_recently_seen_resources">Ressources consultées récemment</string>
    <string name="resource_missing_service_title">Il manque un service ?</string>
    <string name="resource_missing_service_description">Suggérer un service</string>
    <string name="prenom">Prenom</string>
    <string name="nom_de_famille">Nom de famille</string>
    <string name="upload_image">Image Icon</string>
    <string name="take_photo">take photo</string>
    <string name="role_name">Role Name</string>
    <string name="askForPermission_msg">Request code is not specified</string>
    <string name="camera_internal_error_msg">Erreur de lire les données de l\'image</string>
    <string name="back_to_home">Back to Home</string>
    <string name="preview_uploaded_image">preview uploaded image</string>
    <string name="creer_compte_avantage">Créez votre compte pour pouvoir utiliser le chat</string>
    <string name="formulaire_de_chat">formulaire de chat</string>
    <string name="chat_user_role">Professional</string>
    <string-array name="role_names">
        <item>User</item>
        <item>Professional</item>
    </string-array>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="btn_choisir_un_intervenant">Choisir un intervenant</string>
    <string name="Notification_message">Démarrez une conversation pour bénéficier des notifications.</string>
    <string name="fg_adresse_courriel">l\'adresse courriel</string>
    <string name="envoyer_votre_e_mail">Envoyer votre e-mail</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="nom_d_utilisateur">Adresse courriel</string>
    <string name="connexionBtnLogin">Connexion</string>
    <string name="intervenants">intervenants</string>
    <string name="back">back</string>
    <string name="user_chat_image">user</string>
    <string name="remi_lalonde">Remi Lalonde</string>
    <string name="pair_aidant">Pair aidant</string>
    <string name="horloge_icon">horloge</string>
    <string name="disponible_horloge">Disponible</string>
    <string name="call_icon">Call</string>
</resources>