<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setupScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ui.message.PersonnelChatFragment">

    <RelativeLayout
        android:id="@+id/person_identify"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back"
            android:layout_centerVertical="true"
            android:src="@drawable/arrow_back_ios" />

        <ImageView
            android:id="@+id/chat_person_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/user_chat_image"
            android:layout_toEndOf="@id/back_arrow"
            android:src="@drawable/remi_lalonde" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/chat_person_image"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            >
            <TextView
                android:id="@+id/chat_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remi_lalonde"
                android:fontFamily="@font/karla_medium"
                android:textColor="@color/slate"
                android:textSize="18sp"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/aidant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/karla_regular"
                    android:text="@string/pair_aidant"
                    android:textColor="@color/colorGrayContrast"
                    android:textSize="13sp"
                    android:layout_centerVertical="true"
                    />
                <ImageView
                    android:id="@+id/horloge_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/consultation_timer"
                    android:contentDescription="@string/horloge_icon"
                    android:layout_toEndOf="@+id/aidant"
                    android:layout_marginStart="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/karla_regular"
                    android:textColor="@color/green"
                    android:textSize="13sp"
                    android:text="@string/disponible_horloge"
                    android:layout_toEndOf="@+id/horloge_icon"
                    android:layout_marginStart="10dp"/>
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/call_brown"
            android:contentDescription="@string/call_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/top_messages_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:tabSelectedTextColor="@color/slate"
        app:tabIndicatorColor="@color/slate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"

        app:layout_constraintTop_toBottomOf="@+id/person_identify"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_messages_menu"
        />


</androidx.constraintlayout.widget.ConstraintLayout>