<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"

tools:context=".view.ui.login.PasswordForgottenFragment">


<include layout="@layout/background_image"/>



<ImageView
    android:id="@+id/imageView2"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:src="@drawable/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.475"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgettenPasswordTitle"
        style="@style/TextDefault"
        app:flow_horizontalAlign="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:text="@string/mot_de_passe_oubli"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/karla_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        />

<EditText
    android:id="@+id/fg_userEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="94dp"
    android:paddingLeft="10dp"
    android:fontFamily="@font/karla_medium"
    android:hint="@string/fg_adresse_courriel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/loginForgettenPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/envoyer_votre_e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fg_userEmail" />

    <TextView
        android:id="@+id/textViewRegisterNow"
        style="@style/TextDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/karla_medium"
        android:text="@string/don_t_have_an_account_register_now"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginForgettenPasword"
        app:layout_constraintVertical_bias="0.038" />

</androidx.constraintlayout.widget.ConstraintLayout>