<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.message.MessengesNotifications">

    <include layout="@layout/background_image"/>
    <LinearLayout
        android:id="@+id/newChatSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homepage_constraintLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/icon_notifications"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/notification"
                android:layout_marginTop="157dp"
                android:src="@drawable/notifications_off"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <ImageView
                android:id="@+id/intervenant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/intervenants"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/intervenants"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_notifications" />

            <TextView
                android:id="@+id/intro_msg1"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/Notification_message"
                android:textColor="@color/slate"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/karla_medium"
                app:flow_horizontalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intervenant" />
            <Button
                android:id="@+id/startChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="282dp"
                android:height="44dp"
                android:background="@drawable/radio_messages"
                android:gravity="center"
                android:text="@string/btn_choisir_un_intervenant"
                android:fontFamily="@font/karla_medium"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/intro_msg1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>